--- a/toc.md.j2
+++ b/toc.md.j2
@@ -1,6 +1,9 @@
 ## Overview
 
+[![Build Status](https://travis-ci.com/HumanCellAtlas/data-consumer-vignettes.svg?branch=master)](https://travis-ci.com/HumanCellAtlas/data-consumer-vignettes)
+
 Welcome to the DCP Vignette repository, containing walkthrough tutorials to help you get started with the DCP primarily via command-line access. For downstream application development, please refer to the [HCA DCP API documentation](https://prod.data.humancellatlas.org/apis).
+
 The DCP welcomes any contributed notebooks or other tutorials to the list below. You can create your own branch and submit a pull request. 
 
 ## Vignettes Table of Contents:
